--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <div id="Game"></div>
+        <button id="StartGame" disabled>Start Game</button>
         <script type="module" src="./src/Game.js"></script>
     </body>
 </html>
